# chronicle

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  design_requirements.md  element_creation_wizard.txt  opencode.json  session-ses_31c6.md
.opencode/: rules.md
.opencode/agents/: architect.md  build-validator.md  code-architect.md  code-simplifier.md  debugger.md  implementer.md  oncall-guide.md  quality.md  verify-app.md
docs/: README.md  architecture.md  configuration.md  development.md  diagnostics.md  getting-started.md  how-to.md  template-wizard.md  tui-navigation.md  workspace-model.md
src/: config.rs  diagnostics.rs  error.rs  lib.rs  main.rs
src/commands/: extract.rs  init.rs  jot.rs  mod.rs  new_task.rs  task_template.rs
src/model/: mod.rs
src/storage/: md.rs  mod.rs
src/tui/: command.rs  layout.rs  mod.rs  navigation.rs  tree.rs
src/tui/views/: mod.rs
templates/: journal.md  milestone.md  program.md  project.md  subtask.md  task.md  task_min.md
