
[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
comrak = "0.24"
regex = "1.0"
toml = { version = "1.0.3", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
tempfile = "3.10"
